# mysql-connector-odbc

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  CreateBinaryMsi.bat  CreateBinaryZip.bat  CreateSourceZip.bat  INFO_BIN.in  INFO_SRC.in  Install.bat.cmake  LICENSE.txt  MYODBC_CONF.h  MYODBC_MYSQL.h  MYODBC_ODBC.h  README  README.md  README.txt  SECURITY.md  Uninstall.bat.cmake  Upgrade.bat  VersionInfo.h  VersionInfo.h.cmake  build_installer.ps1  config.h.cmake  config8.h.cmake  configure.cmake  version.cmake
.github/: pull_request_template.md
.github/workflows/: dockerized.yml  failover.yml  main.yml  performance.yml  release.yml  remove-old-artifacts.yml
cmake/: FindLtdl.cmake  FindMySQL.cmake  FindODBC.cmake  character_sets.cmake  gcov.cmake  getmysqlversion.c  havelpcwstr.c  info_bin.cmake  install_layout.cmake  libutils.cmake  needdl.c  sqlcolattrib1.c.cmake  sqlcolattrib2.c.cmake  sqlparamopt1.c.cmake  sqlparamopt2.c.cmake  ssl_setup.cmake  stack_direction.c  type_vector.c  version_info.cmake
cmake/version_info/: gen_version_info.cmake  show_version_info.cmake  version_info.rc.in
dltest/: CMakeLists.txt  dltest.c
driver/: CMakeLists.txt  ansi.cc  base_metrics_holder.cc  base_metrics_holder.h  catalog.c  catalog.cc  catalog.h  catalog_no_i_s.c  catalog_no_i_s.cc  cluster_aware_hit_metrics_holder.cc  cluster_aware_hit_metrics_holder.h  cluster_aware_metrics.cc  cluster_aware_metrics.h  cluster_aware_metrics_container.cc  cluster_aware_metrics_container.h  cluster_aware_time_metrics_holder.cc  cluster_aware_time_metrics_holder.h  cluster_topology_info.cc  cluster_topology_info.h  connect.c  connect.cc  cursor.c  cursor.cc  desc.cc  dll.c  dll.cc  driver.cc  driver.def.cmake  driver.h  driver.rc.cmake  error.cc  error.h  execute.cc  failover.h  failover_connection_handler.cc  failover_handler.cc  failover_reader_handler.cc  failover_writer_handler.cc  handle.c  handle.cc  (+34 more)
driver/old/: telemetry.cc  telemetry.h
extra/otel/: CMakeLists.txt  README.txt
extra/otel/opentelemetry-cpp-1.10.0/api/: CMakeLists.txt
include/: sys_main.h
include/mysql-8.0/: base64.h  big_endian.h  c_string_less.h  caching_sha2_passwordopt-longopts.h  caching_sha2_passwordopt-vars.h  crypt_genhash_impl.h  decimal.h  depth_first_search.h  dur_prop.h  errmsg.h  field_types.h  ft_global.h  heap.h  keycache.h  lex_string.h  lf.h  little_endian.h  m_ctype.h  m_string.h  map_helpers.h  (+101 more)
installer/: CMakeLists.txt  myodbc-installer.c  myodbc-installer.cc
integration/: CMakeLists.txt  base_failover_integration_test.cc  connection_string_builder.cc  connection_string_builder_test.cc  failover_integration_test.cc  failover_performance_test.cc  network_failover_integration_test.cc
mysql_strings/: CMakeLists.txt  bchange.c  conf_to_src.cc  ctype-big5.c  ctype-big5.cc  ctype-bin.c  ctype-bin.cc  ctype-cp932.c  ctype-cp932.cc  ctype-czech.c  ctype-czech.cc  ctype-euc_kr.c  ctype-euc_kr.cc  ctype-eucjpms.c  ctype-eucjpms.cc  ctype-extra.c  ctype-extra.cc  ctype-gb18030.c  ctype-gb18030.cc  ctype-gb2312.c  ctype-gb2312.cc  ctype-gbk.c  ctype-gbk.cc  ctype-latin1.c  ctype-latin1.cc  ctype-mb.c  ctype-mb.cc  ctype-simple.c  ctype-simple.cc  ctype-sjis.c  ctype-sjis.cc  ctype-tis620.c  ctype-tis620.cc  ctype-uca.c  ctype-uca.cc  ctype-ucs2.c  ctype-ucs2.cc  ctype-ujis.c  ctype-ujis.cc  ctype-utf8.c  (+51 more)
mysql_sys/: CMakeLists.txt  array.c  array.cc  charset-def.c  charset-def.cc  charset.c  charset.cc  errors.c  errors.cc  list.c  list.cc  mf_dirname.c  mf_dirname.cc  mf_pack.c  mf_pack.cc  mf_qsort.c  my_access.c  my_access.cc  my_alloc.c  my_alloc.cc  my_check_opt.h  my_div.c  my_error.c  my_error.cc  my_file.cc  my_fstream.c  my_fstream.cc  my_getsystime.cc  my_getwd.c  my_getwd.cc  my_handler_errors.h  my_init.c  my_init.cc  my_lib.c  my_lib.cc  my_malloc.c  my_malloc.cc  my_mess.c  my_mess.cc  my_once.c  (+31 more)
packaging/: CMakeLists.txt  mysql-connector-odbc.spec.in
scripts/: myodbc3.spec.sh
setupgui/: CMakeLists.txt  ConfigDSN.cc  callbacks.cc  myodbc8S.def  myodbcS.def.in  setupgui.h  utils.cc
setupgui/gtk/: ODBCINSTGetProperties.cc  odbc.glade  odbcdialogparams.cc  setup_loader.cc  try.cc  ui_xml.h  ui_xml_v2.h
setupgui/gtk/pixmaps/: connector_odbc_header.xpm
setupgui/windows/: TabCtrl.cpp  TabCtrl.h  main.cpp  odbcdialogparams.cpp  odbcdialogparams.h  odbcdialogparams.rc  odbcdialogparams.rc.in  resource.h  tooltip.cpp
test/: CMakeLists.txt  my_auth.c  my_auth.cc  my_basics.c  my_blob.c  my_bug13766.c  my_bulk.c  my_catalog1.c  my_catalog2.c  my_catalog3.cc  my_crash.c  my_curext.c  my_cursor.c  my_data.c  my_data.cc  my_datetime.c  my_desc.c  my_dyn_cursor.c  my_error.c  my_info.c  my_keys.c  my_nodma.c  my_nodmw.c  my_options.cc  my_param.c  my_param2.cc  my_pooling.c  my_prepare.c  my_relative.c  my_result1.c  my_result2.c  my_result3.cc  my_scroll.c  my_setup.c  my_tran.c  my_types.c  my_unicode.c  my_unixodbc.c  my_use_result.c  odbc.ini.in  (+3 more)
test/cmake/: generateinifiles.cmake
test/docker/: docker-compose.yml
test/tokens/: openid_token_correct.txt  openid_token_expired.txt  openid_token_invalid.txt  openid_token_issuer2.txt  openid_token_key2.txt  openid_token_user2.txt
testframework/: build.gradle.kts  settings.gradle.kts
unit_testing/: CMakeLists.txt  cluster_aware_metrics_test.cc  failover_handler_test.cc  failover_reader_handler_test.cc  failover_writer_handler_test.cc  main.cc  mock_objects.h  monitor_connection_context_test.cc  monitor_service_test.cc  monitor_test.cc  monitor_thread_container_test.cc  multi_threaded_monitor_service_test.cc  mysql_proxy_test.cc  query_parsing_test.cc  test_utils.cc  test_utils.h  topology_service_test.cc
util/: CMakeLists.txt  installer.cc  installer.h  odbcinstw.cc  stringutil.c  stringutil.cc  stringutil.h  unicode_transcode.cc  unicode_transcode.h
wix/: CMakeLists.txt  DwordToNumber.vbs  README.TXT  mysql-connector-odbc-msi-arpprops.wxs  mysql-connector-odbc-msi-arpprops.xml  mysql_common_ui.wxs  mysql_common_ui.xml  mysql_odbc.wxs.in  mysql_odbc.xml.in  mysql_odbc_fragment.wxs  mysql_odbc_fragment.xml
(+253 files in other folders)
